Added mintangle utility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,22 @@ find_package(minunit REQUIRED)
 
 INCLUDE_DIRECTORIES(include)
 AUX_SOURCE_DIRECTORY(src/minweave MINWEB_MINWEAVE_SOURCES)
+AUX_SOURCE_DIRECTORY(src/mintangle MINWEB_MINTANGLE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/lexer MINWEB_LEXER_SOURCES)
 AUX_SOURCE_DIRECTORY(src/processor MINWEB_PROCESSOR_SOURCES)
+AUX_SOURCE_DIRECTORY(src/util MINWEB_UTIL_SOURCES)
 AUX_SOURCE_DIRECTORY(test MINWEB_TEST_SOURCES)
 
 ADD_LIBRARY(minweb_lexer STATIC ${MINWEB_LEXER_SOURCES})
 TARGET_COMPILE_OPTIONS(minweb_lexer PRIVATE -O2)
 ADD_LIBRARY(minweb_processor STATIC ${MINWEB_PROCESSOR_SOURCES})
 TARGET_COMPILE_OPTIONS(minweb_processor PRIVATE -O2)
+ADD_LIBRARY(minweb_util STATIC ${MINWEB_UTIL_SOURCES})
+TARGET_COMPILE_OPTIONS(minweb_util PRIVATE -O2)
 
 ADD_EXECUTABLE(testminweb
-    ${MINWEB_LEXER_SOURCES} ${MINWEB_PROCESSOR_SOURCES} ${MINWEB_TEST_SOURCES})
+    ${MINWEB_LEXER_SOURCES} ${MINWEB_PROCESSOR_SOURCES} ${MINWEB_TEST_SOURCES}
+    ${MINWEB_UTIL_SOURCES})
 TARGET_COMPILE_OPTIONS(testminweb PRIVATE --coverage ${MINUNIT_CFLAGS})
 TARGET_LINK_LIBRARIES(testminweb PRIVATE --coverage ${MINUNIT_LDFLAGS})
 
@@ -32,6 +37,12 @@ ADD_EXECUTABLE(minweave
     ${MINWEB_MINWEAVE_SOURCES})
 TARGET_COMPILE_OPTIONS(minweave PRIVATE -O2)
 TARGET_LINK_LIBRARIES(minweave PRIVATE minweb_processor minweb_lexer)
+
+ADD_EXECUTABLE(mintangle
+    ${MINWEB_MINTANGLE_SOURCES})
+TARGET_COMPILE_OPTIONS(mintangle PRIVATE -O2)
+TARGET_LINK_LIBRARIES(mintangle
+    PRIVATE minweb_processor minweb_lexer minweb_util)
 
 #Build a pkg-config file
 SET(MINWEB_PC "${CMAKE_BINARY_DIR}/minweb.pc")
