--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(minunit REQUIRED)
 INCLUDE_DIRECTORIES(include)
 AUX_SOURCE_DIRECTORY(src/minweave MINWEB_MINWEAVE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/mintangle MINWEB_MINTANGLE_SOURCES)
+AUX_SOURCE_DIRECTORY(src/minextract MINWEB_MINEXTRACT_SOURCES)
 AUX_SOURCE_DIRECTORY(src/lexer MINWEB_LEXER_SOURCES)
 AUX_SOURCE_DIRECTORY(src/processor MINWEB_PROCESSOR_SOURCES)
 AUX_SOURCE_DIRECTORY(src/util MINWEB_UTIL_SOURCES)
@@ -41,6 +42,11 @@ ADD_EXECUTABLE(mintangle
 TARGET_COMPILE_OPTIONS(mintangle PRIVATE -O2)
 TARGET_LINK_LIBRARIES(mintangle PRIVATE minweb)
 
+ADD_EXECUTABLE(minextract
+    ${MINWEB_MINEXTRACT_SOURCES})
+TARGET_COMPILE_OPTIONS(minextract PRIVATE -O2)
+TARGET_LINK_LIBRARIES(minextract PRIVATE minweb)
+
 #Build a pkg-config file
 SET(MINWEB_PC "${CMAKE_BINARY_DIR}/minweb.pc")
 FILE(WRITE  ${MINWEB_PC} "Name: minweb")
@@ -64,5 +70,5 @@ INSTALL(TARGETS minweb
         ARCHIVE DESTINATION lib)
 
 #Install binaries
-INSTALL(TARGETS minweave mintangle
+INSTALL(TARGETS minweave mintangle minextract
         RUNTIME DESTINATION bin)
