Added version flag. Bumped version to 0.2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_policy(SET CMP0048 NEW)
-PROJECT(minweb VERSION 0.1)
+PROJECT(minweb VERSION 0.2)
+SET(SNAPSHOT FALSE)
 
 cmake_minimum_required(VERSION 3.10)
 
@@ -9,7 +10,14 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
 
 find_package(minunit REQUIRED)
 
+IF(SNAPSHOT)
+    SET(MINWEB_VERSION "${CMAKE_PROJECT_VERSION}-snapshot")
+ELSE()
+    SET(MINWEB_VERSION "${CMAKE_PROJECT_VERSION}")
+ENDIF()
+
 INCLUDE_DIRECTORIES(include)
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 AUX_SOURCE_DIRECTORY(src/minweave MINWEB_MINWEAVE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/mintangle MINWEB_MINTANGLE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/minextract MINWEB_MINEXTRACT_SOURCES)
@@ -17,6 +25,8 @@ AUX_SOURCE_DIRECTORY(src/lexer MINWEB_LEXER_SOURCES)
 AUX_SOURCE_DIRECTORY(src/processor MINWEB_PROCESSOR_SOURCES)
 AUX_SOURCE_DIRECTORY(src/util MINWEB_UTIL_SOURCES)
 AUX_SOURCE_DIRECTORY(test MINWEB_TEST_SOURCES)
+
+CONFIGURE_FILE(config.h.in config.h @ONLY)
 
 ADD_LIBRARY(minweb STATIC
     ${MINWEB_LEXER_SOURCES} ${MINWEB_PROCESSOR_SOURCES} ${MINWEB_UTIL_SOURCES})
