--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 AUX_SOURCE_DIRECTORY(src/minweave MINWEB_MINWEAVE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/mintangle MINWEB_MINTANGLE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/minextract MINWEB_MINEXTRACT_SOURCES)
+AUX_SOURCE_DIRECTORY(src/mintrace MINWEB_MINTRACE_SOURCES)
 AUX_SOURCE_DIRECTORY(src/lexer MINWEB_LEXER_SOURCES)
 AUX_SOURCE_DIRECTORY(src/processor MINWEB_PROCESSOR_SOURCES)
 AUX_SOURCE_DIRECTORY(src/util MINWEB_UTIL_SOURCES)
@@ -56,6 +57,11 @@ ADD_EXECUTABLE(minextract
     ${MINWEB_MINEXTRACT_SOURCES})
 TARGET_COMPILE_OPTIONS(minextract PRIVATE -O2)
 TARGET_LINK_LIBRARIES(minextract PRIVATE minweb)
+
+ADD_EXECUTABLE(mintrace
+    ${MINWEB_MINTRACE_SOURCES})
+TARGET_COMPILE_OPTIONS(mintrace PRIVATE -O2)
+TARGET_LINK_LIBRARIES(mintrace PRIVATE minweb)
 
 #Build a pkg-config file
 SET(MINWEB_PC "${CMAKE_BINARY_DIR}/minweb.pc")
